--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>PANKAJ</h1>
+            <h1>PANKAJ PAL</h1>
             <p>Web Developer & Designer</p>
 
         </div>
